# focusflow

./: .eslintrc.cjs  .eslintrc.js  .gitignore  CLEANUP_SCRIPT.cjs  DEVELOPMENT_PLAN.md  DEVELOPMENT_ROADMAP.md  FINAL_COMPLETION_REPORT.md  FOCUSFLOW_COMPREHENSIVE_ANALYSIS_2025.md  FOCUSFLOW_SYSTEM_ANALYSIS.md  PERFORMANCE_IMPLEMENTATION_SUMMARY.md  PROJECT_CLEANUP_ACTIONS.md  PROJECT_CLEANUP_REPORT.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_SUMMARY.md  QUALITY_REPORT.md  README.md  TEST_SUMMARY.md  UNIFIED_TIMER_UPDATE.md  build-desktop.js  build-wasm.js  index.html  jest.config.js  package-lock.json  package.json  project-progress-summary.md  setup-github.md  tailwind.config.js  test-coverage-report.md  test-style.json  test_anthropic.py  tsconfig.build.json  tsconfig.json  vite.config.production.ts  vite.config.ts
docs/: BUILD_TEST_REPORT.md  CODE_QUALITY_REPORT.md  DESKTOP_TEST_REPORT.json  FAQ.md  FINAL_QUALITY_ASSURANCE_REPORT.md  KEYBOARD_SHORTCUTS.md  MAC_UI_IMPROVEMENTS.md  MAINTENANCE.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PERFORMANCE_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  SOUND_SYSTEM_GUIDE.md  TAURI_CONFIG_ANALYSIS.md  TEST_COVERAGE_OPTIMIZATION_REPORT.md  TEST_COVERAGE_OPTIMIZATION_SUMMARY.md  TEST_SYSTEM_REPAIR_SUMMARY.md  THEME_SYSTEM_GUIDE.md  TIMER_SYSTEM_UPDATE.md  USER_EXPERIENCE_TEST_GUIDE.md  USER_GUIDE.md  WEB_OPTIMIZATION_PLAN.md
scripts/: build-desktop-fixed.cjs  build-desktop.cjs  build-desktop.js  build-optimization.js  final-quality-check.js  quality-assurance.js
src/: App.tsx  Router.tsx  desktop.tsx  index.css  main.tsx  migration-guide.md  vite-env.d.ts  web.tsx  web.tsx.new
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
src/__tests__/: Timer.test.ts  (+7 more)
test-app/: App.tsx  README.md  TimerStyleTestApp.tsx  index.html  package.json  styles.css  tsconfig.json  vite.config.ts
(+507 files in other folders)
