[package]
name = "focus-flow"
version = "0.1.0"
description = "专注与休息循环管理应用"
authors = ["Your Name"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.69"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "shell-open", "fs-write-file", "fs-read-dir", "fs-remove-dir", "fs-exists", "fs-read-file", "fs-create-dir", "fs-remove-file", "window-all", "notification-all"] }
# tauri-plugin-sql = { version = "1.4.0", features = ["sqlite"] }
window-shadows = "0.2.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s" 
