[package]
name = "focus-flow"
version = "1.0.0"
description = "专注与休息循环管理应用"
authors = ["FocusFlow Team <team@focusflow.app>"]
license = "MIT"
repository = "https://github.com/focusflow/focusflow"
homepage = "https://focusflow.app"
keywords = ["productivity", "focus", "timer", "desktop", "tauri"]
categories = ["gui", "productivity"]
edition = "2021"
rust-version = "1.69"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "global-shortcut-all", "shell-open", "fs-write-file", "fs-read-dir", "fs-remove-dir", "fs-exists", "fs-read-file", "fs-create-dir", "fs-remove-file", "window-all", "notification-all", "global-shortcut"] }
window-shadows = "0.2.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s" 
